--- a/src/web/web.csproj
+++ b/src/web/web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="dto" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.6" />
   </ItemGroup>
 
