--- a/src/web/appsettings.json.template
+++ b/src/web/appsettings.json.template
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "OpenIdConnect":
+  {
+    "Keycloak":
+    {
+      "ClientId":"",
+      "ClientSecret": "",
+      "Authority":""
+    }
+  },
   "AllowedHosts": "*"
 }
