--- a/src/.gitignore
+++ b/src/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 appsettings.json
-web/wwwroot/lib
+web/wwwroot/
 
 # User-specific files
 *.rsuser
