--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-select": "^1.13.11",
+    "chart.js": "^2.9.3",
     "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
     "jquery-validation": "^1.19.1",
