Gestion public authorities & option certificats invalides

--- a/src/web/appsettings.json.template
+++ b/src/web/appsettings.json.template
@@ -12,7 +12,15 @@
     {
       "ClientId":"",
       "ClientSecret": "",
-      "Authority":""
+      "Authority":"",
+      "AllowInvalidAuthoritySSLCertificate": false,
+      "PublicAuthorityAliases":
+      [
+        {
+          "Host": "",
+          "Authority": ""
+        }
+      ]
     }
   },
   "CookieExpiration" : 15,
