Gestion correcte des headers X-Forwarded

--- a/src/web/appsettings.json.template
+++ b/src/web/appsettings.json.template
@@ -24,5 +24,9 @@
     }
   },
   "CookieExpiration" : 15,
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KnownProxies":
+  [
+    "127.0.0.1"
+  ]
 }
