Préparation bloc écran

--- a/src/web/appsettings.Development.json
+++ b/src/web/appsettings.Development.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Debug",
-      "Microsoft.Hosting.Lifetime": "Debug"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
