Gestion des tags de transaction

--- a/src/web/appsettings.Development.json
+++ b/src/web/appsettings.Development.json
@@ -2,8 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Debug",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
     }
   }
 }
